<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF191970" >
    
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal" >
	    
        <Button
            android:id="@+id/btConnectButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="ConnectBT"
            android:text="@string/connectBTText"
            android:textSize="12sp" />
        
        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="StopMotion"
            android:text="@string/stopMotion"
            android:textSize="12sp" />
        
        <Button
            android:id="@+id/wakeButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="WakeSleep"
            android:text="@string/wake"
            android:textSize="12sp" />
        
         <Button
             android:id="@+id/gaitButton"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:onClick="ChangeGait"
             android:text="@string/gait"
             android:textSize="12sp" />
         
        <Button
            android:id="@+id/onroadButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:onClick="ChangeOnRoad"
            android:text="@string/onroad"
            android:textSize="12sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/crabBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="190dp"
        android:max="100"
        android:progress="50"
        />

    <SeekBar
        android:id="@+id/speedBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="270dp"
        android:max="100"
        android:progress="100"
        android:rotation="270" />
    
    <SeekBar
        android:id="@+id/heightBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="90dp"
        android:max="100"
        android:progress="0"
        android:rotation="270" />
    
    <SeekBar
        android:id="@+id/rotateBar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="370dp"
        android:max="100"
        android:progress="50"
        />
    
     <LinearLayout
         android:id="@+id/status"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:orientation="horizontal" >
    	
    	<EditText
        android:id="@+id/motionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:inputType="none"
        android:text="@string/motionText"
        android:textColor="#FFFFFFFF" />
    	
    	<EditText
        android:id="@+id/gaitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:inputType="none"
        android:text="@string/motionText"
        android:textColor="#FFFFFFFF" />
    </LinearLayout>

</FrameLayout>